# In-Process-Dumper

./: CMakeLists.txt  InProcessDumper.json  README.md  build.bat  config.json
src/: dump_workflow.cpp  dumper.cpp  dumper_common.cpp  dumper_internal.h  pe_reconstruction.cpp
src/common/: dumper_common.cpp
src/game/unity/: metadata_file_watch.cpp  unity_metadata.cpp
src/pe/: pe_reconstruction.cpp
src/workflow/: dump_workflow.cpp
